# advent-of-code-2024-smart-contracts-stylus

./: .gitignore  .npmrc  Cargo.toml  DEPLOYMENTS.md  README.md  biome.json  package.json  pnpm-lock.yaml
contracts/orchestrator/: Cargo.toml
contracts/orchestrator/src/: lib.rs
contracts/solution/: Cargo.toml
contracts/solution/src/: lib.rs
contracts/solutions/day_1/: Cargo.toml
contracts/solutions/day_1/src/: lib.rs
contracts/solutions/day_1/tests/: integration_tests.rs
contracts/solutions/day_10/: Cargo.toml
contracts/solutions/day_10/src/: lib.rs
contracts/solutions/day_10/tests/: integration_tests.rs
contracts/solutions/day_11/: Cargo.toml
contracts/solutions/day_11/src/: lib.rs
contracts/solutions/day_11/tests/: integration_tests.rs
contracts/solutions/day_12/: Cargo.toml
contracts/solutions/day_12/src/: lib.rs
contracts/solutions/day_12/tests/: integration_tests.rs
contracts/solutions/day_13/: Cargo.toml
contracts/solutions/day_13/src/: lib.rs
contracts/solutions/day_13/tests/: integration_tests.rs
contracts/solutions/day_14/: Cargo.toml
contracts/solutions/day_14/src/: lib.rs
contracts/solutions/day_14/tests/: integration_tests.rs
contracts/solutions/day_15/: Cargo.toml
contracts/solutions/day_15/src/: lib.rs
contracts/solutions/day_15/tests/: integration_tests.rs
contracts/solutions/day_16/: Cargo.toml
contracts/solutions/day_16/src/: lib.rs
contracts/solutions/day_16/tests/: integration_tests.rs
contracts/solutions/day_17/: Cargo.toml
contracts/solutions/day_17/src/: lib.rs
contracts/solutions/day_17/tests/: integration_tests.rs
contracts/solutions/day_18/: Cargo.toml
contracts/solutions/day_18/src/: lib.rs
contracts/solutions/day_18/tests/: integration_tests.rs
contracts/solutions/day_19/: Cargo.toml
contracts/solutions/day_19/src/: lib.rs
contracts/solutions/day_19/tests/: integration_tests.rs
contracts/solutions/day_2/: Cargo.toml
contracts/solutions/day_2/src/: lib.rs
contracts/solutions/day_2/tests/: integration_tests.rs
contracts/solutions/day_20/: Cargo.toml
contracts/solutions/day_20/src/: lib.rs
contracts/solutions/day_20/tests/: integration_tests.rs
contracts/solutions/day_21/: Cargo.toml
contracts/solutions/day_21/src/: lib.rs
contracts/solutions/day_21/tests/: integration_tests.rs
contracts/solutions/day_22/: Cargo.toml
contracts/solutions/day_22/src/: lib.rs
contracts/solutions/day_22/tests/: integration_tests.rs
contracts/solutions/day_23/: Cargo.toml
contracts/solutions/day_23/src/: lib.rs
contracts/solutions/day_23/tests/: integration_tests.rs
contracts/solutions/day_24/: Cargo.toml
contracts/solutions/day_24/src/: lib.rs
contracts/solutions/day_24/tests/: integration_tests.rs
contracts/solutions/day_25/: Cargo.toml
contracts/solutions/day_25/src/: lib.rs
contracts/solutions/day_25/tests/: integration_tests.rs
contracts/solutions/day_3/: Cargo.toml
contracts/solutions/day_3/src/: lib.rs
contracts/solutions/day_4/: Cargo.toml
contracts/solutions/day_4/src/: lib.rs
contracts/solutions/day_5/: Cargo.toml
contracts/solutions/day_6/: Cargo.toml
contracts/solutions/day_7/: Cargo.toml
contracts/solutions/day_8/: Cargo.toml
contracts/solutions/day_9/: Cargo.toml
frontend/: .env.example  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/configs/: index.ts  types.ts
frontend/src/contract-types/: Aoc2024.ts  Aoc2024Factory.ts  index.ts
scripts/: .env.example  add_solution.sh  check-wasm.sh  deploy.sh  init.sh
scripts/tests/: nitro-testnode.sh  test-e2e.sh  test-unit.sh
src/: lib.rs  main.rs
tests/: integration_tests.rs
tests/abi/: mod.rs
(+26 files in other folders)
