[package]
name = "aoc-2024"
version = "0.1.2"
edition = "2021"

[dependencies]
alloy-primitives = { version = "=0.7.6", default-features = false }
alloy-sol-types ={ version = "=0.7.6", default-features = false }
# stylus-sdk = { version = "0.6.0", features = ["debug"] }
stylus-sdk = { version = "0.6.0" }

[dev-dependencies]
e2e = { git = "https://github.com/TucksonDev/e2e-lib.git" }

[features]
export-abi = ["stylus-sdk/export-abi"]
# debug = ["stylus-sdk/debug"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"

[profile.dev]
panic = "abort"

[workspace]
