# [workspace]
[workspace]
members = [
   "contracts/orchestrator",
   "contracts/solution",
   "contracts/solutions/*",
]

# Explicitly set the resolver to version 2, which is the default for packages
# with edition >= 2021.
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.package]
authors = ["martines3000"]
edition = "2021"
license = "MIT"
repository = "https://github.com/martines3000/advent-of-code-2024-smart-contracts-stylus"
version = "0.1.0"

[workspace.lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"
rust_2021_compatibility = { level = "warn", priority = -1 }

[workspace.lints.clippy]
pedantic = "warn"
all = "warn"

[workspace.dependencies]
# stylus-sdk = "0.6.0"
stylus-sdk = { version = "0.6.0", features = ["debug"] }
alloy-primitives = { version = "=0.7.6", default-features = false }
alloy-sol-types = { version = "=0.7.6", default-features = false }
hashbrown = "0.15.2"
e2e = { git = "https://github.com/TucksonDev/e2e-lib.git" }
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true
lto = true
debug = false
rpath = false
debug-assertions = false
incremental = false

[profile.dev]
panic = "abort"

# [lib]
# crate-type = ["lib", "cdylib"]
